--- a/TcpServer/TcpServer.csproj
+++ b/TcpServer/TcpServer.csproj
@@ -62,6 +62,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Client.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="ServerMain.xaml.cs">
       <DependentUpon>ServerMain.xaml</DependentUpon>
       <SubType>Code</SubType>
