--- a/TcpClient/TcpClient.csproj
+++ b/TcpClient/TcpClient.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Client.cs" />
     <Compile Include="ClientMain.xaml.cs">
       <DependentUpon>ClientMain.xaml</DependentUpon>
       <SubType>Code</SubType>
